# python-projects

./: README.md
fastapi-micro/: pyproject.toml
fastapi-micro/fastapi_neon/: database.py  main.py  testing.py
